--- a/requirements.txt
+++ b/requirements.txt
@@ -26,3 +26,6 @@ typing_extensions==4.12.2
 urllib3==2.2.3
 websocket-client==1.8.0
 wsproto==1.2.0
+beautifulsoup4==4.12.3
+djangorestframework==3.15.2
+soupsieve==2.6
