--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.8.1
 attrs==24.2.0
+beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
 chromedriver-autoinstaller==0.6.4
 Django==5.1.1
 django-crispy-forms==2.3
 django-extensions==3.2.3
+djangorestframework==3.15.2
 h11==0.14.0
 idna==3.10
 iniconfig==2.0.0
@@ -15,17 +17,17 @@ pluggy==1.5.0
 PySocks==1.7.1
 pytest==8.3.3
 pytest-django==4.9.0
+python-dotenv==1.0.1
 requests==2.32.3
 selenium==4.25.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.6
 sqlparse==0.5.1
 trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 wsproto==1.2.0
-beautifulsoup4==4.12.3
-djangorestframework==3.15.2
-soupsieve==2.6
