--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==5.1.1
 django-crispy-forms==2.3
 django-environ==0.11.2
 django-extensions==3.2.3
+django-filter==24.3
 django-jazzmin==3.0.1
 djangorestframework==3.15.2
 exceptiongroup==1.2.2
@@ -24,6 +25,7 @@ httpx==0.27.2
 idna==3.10
 iniconfig==2.0.0
 jiter==0.6.1
+Markdown==3.7
 markdown2==2.5.1
 mysqlclient==2.2.5
 openai==1.51.2
