--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.log
 *.pot
 *.pyc
-__pycache__/
+**/__pycache__/
 db.sqlite3
 .env
 
@@ -18,3 +18,5 @@ env/
 
 # MacOS
 .DS_Store
+
+!**/migrations/__init__.py
